# zenoh_zephyr_litex

./: .gitignore  README.md
zenoh_ws/: r_pub.py  r_sub.py  z_pub.py  z_pubsub.py  z_sub.py
zephyr_ws/app/common/include/: ipv4_dhcp_client.h  net_utils.h  rmw_zenoh_compat.h
zephyr_ws/app/common/src/: atomic_shim.c  ipv4_dhcp_client.c  net_utils.c  rmw_zenoh_compat.c
zephyr_ws/app/ros2_pub/: CMakeLists.txt
zephyr_ws/app/ros2_pub/src/: main.c
zephyr_ws/app/ros2_sub/: CMakeLists.txt
zephyr_ws/app/ros2_sub/src/: main.c
zephyr_ws/app/ros2_twist_pub/: CMakeLists.txt
zephyr_ws/app/ros2_twist_pub/src/: main.c
zephyr_ws/app/teleop_pico/: CMakeLists.txt  README.md  digilent_arty_pmod_acl2.patch  digilent_arty_pmod_gyro.patch  overlay-pmodacl2.dts  overlay-pmodgyro.dts  prj.conf
zephyr_ws/app/teleop_pico/dts/bindings/sensor/: st,l3g4200d.yaml
zephyr_ws/app/teleop_pico/src/: main.c
zephyr_ws/app/zenoh_pub/: CMakeLists.txt  prj.conf
zephyr_ws/app/zenoh_pub/src/: main.c
zephyr_ws/app/zenoh_pubsub/: CMakeLists.txt  prj.conf
zephyr_ws/app/zenoh_pubsub/src/: main.c
zephyr_ws/app/zenoh_sub/: CMakeLists.txt  prj.conf
zephyr_ws/app/zenoh_sub/src/: atomic_shim.c  main.c
zephyr_ws/manifest/: west.yml
zephyr_ws/manifest/submanifests/: zenoh-pico.yaml
